Implementando la estructura para los cuadros , el primer cuadro y responsive design.

--- a/index.html
+++ b/index.html
@@ -6,14 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Hubballi&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Hubballi&family=Mukta:wght@200&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet" type="text/css">
     <title>DVP Gallery</title>
 </head>
 <body>
     <header>
-        <img id="firma" src="img/firma grande fondo blanco.png" alt="">
-        <h1 id="titulo">DVP Gallery</h1>
+        <div id="contenidoHeader">
+            <img id="firma" src="img/firma grande fondo blanco.png" alt="">
+            <div id="lineaVerticalPrincipal"></div>
+            <h1 id="tituloPrincipal">DVP Gallery</h1>
+        </div>
     </header>
+
+    <main>
+        <section>
+            <img src="img/Stoned Face Art 1 Made by hand with brush and ink , then digitalized.png" alt="">
+            <div class="lineaVerticalSecciones"></div>
+            <aside>
+                <h1>Stoned Face</h1>    
+                <p>This is my first painting. It was hand-made with black ink and brush on paper. Then it was
+                    digitalized and transformed into NFT art.
+                </p>
+            </aside>
+        </section>
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
