Mejorando el header

--- a/about.html
+++ b/about.html
@@ -19,9 +19,10 @@
     <header>
             <div id="contenidoHeader">
                 <a href="index.html">
-                    <img id="firma" src="img/firma grande fondo blanco.png" alt="">
+                    <img id="firma" src="img/firma grande.png" alt="">
                     <div id="lineaVerticalPrincipal"></div>
                     <h1 id="tituloPrincipal">DVP Gallery</h1>
+                    <div id="lineaVerticalSecundaria"></div>
                 </a>
             </div>
         
