Añadiendo secciones horizontales y mejorando el responsive design

--- a/index.html
+++ b/index.html
@@ -72,6 +72,17 @@
                 </p>
             </aside>
         </section>
+
+        <div class="seccionHorizontal">
+            <a href="https://opensea.io/" target="_blank"><img id="painting4" src="img/prueba.png" alt=""></a>
+            <div class="lineaVerticalSeccionesHorizontales"></div>
+            <aside class="asideSeccionesHorizontales">
+                <a href="https://opensea.io/" target="_blank"><h1>Eye</h1></a>  
+                <p>This is my fourth painting. It was hand-made with black ink and brush on paper. Then it was
+                    digitalized and transformed into NFT art.
+                </p>
+            </aside>
+        </div>
     </main>
 
     <footer>
