--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
         </section>
 
         <section>
-            <a href="https://opensea.io/" target="_blank"><img id="painting2" src="img/River Art 2.png" alt=""></a>
+            <a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/14343423571783764867245144106724765376315218788807079689183670694886590382081" target="_blank"><img id="painting2" src="img/River Art 2.png" alt=""></a>
             <div class="lineaVerticalSecciones"></div>
             <aside>
-                <a href="https://opensea.io/" target="_blank"><h1>River</h1></a>  
+                <a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/14343423571783764867245144106724765376315218788807079689183670694886590382081" target="_blank"><h1>River</h1></a>  
                 <p>This is my second painting. It was hand-made with black ink and brush on paper. Then it was
                     digitalized and transformed into NFT art.
                 </p>
@@ -63,10 +63,10 @@
         </section>
 
         <section>
-            <a href="https://opensea.io/" target="_blank"><img id="painting3" src="img/Tree Art 3.jpg" alt=""></a>
+            <a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/14343423571783764867245144106724765376315218788807079689183670698185125265409" target="_blank"><img id="painting3" src="img/Tree Art 3.jpg" alt=""></a>
             <div class="lineaVerticalSecciones"></div>
             <aside>
-                <a href="https://opensea.io/" target="_blank"><h1>Tree</h1></a>  
+                <a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/14343423571783764867245144106724765376315218788807079689183670698185125265409" target="_blank"><h1>Tree</h1></a>  
                 <p>This is my third painting. It was hand-made with black ink and brush on paper. Then it was
                     digitalized and transformed into NFT art.
                 </p>
