--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <main>
         <section>
-            <a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/14343423571783764867245144106724765376315218788807079689183670688289520615425" target="_blank"><img id="painting1" src="img/Stoned Face Art 1 Made by hand with brush and ink , then digitalized.png" alt=""></a>
+            <a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/14343423571783764867245144106724765376315218788807079689183670688289520615425" target="_blank"><img id="painting1" src="img/Art 1 Stoned Face.png" alt=""></a>
             <div class="lineaVerticalSecciones"></div>
             <aside>
                 <a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/14343423571783764867245144106724765376315218788807079689183670688289520615425" target="_blank"><h1>Stoned Face</h1></a>  
@@ -52,7 +52,7 @@
         </section>
 
         <section>
-            <a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/14343423571783764867245144106724765376315218788807079689183670694886590382081" target="_blank"><img id="painting2" src="img/River Art 2.png" alt=""></a>
+            <a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/14343423571783764867245144106724765376315218788807079689183670694886590382081" target="_blank"><img id="painting2" src="img/Art 2 River.png" alt=""></a>
             <div class="lineaVerticalSecciones"></div>
             <aside>
                 <a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/14343423571783764867245144106724765376315218788807079689183670694886590382081" target="_blank"><h1>River</h1></a>  
@@ -63,7 +63,7 @@
         </section>
 
         <section>
-            <a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/14343423571783764867245144106724765376315218788807079689183670698185125265409" target="_blank"><img id="painting3" src="img/Tree Art 3.jpg" alt=""></a>
+            <a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/14343423571783764867245144106724765376315218788807079689183670698185125265409" target="_blank"><img id="painting3" src="img/Art 3 Tree.jpg" alt=""></a>
             <div class="lineaVerticalSecciones"></div>
             <aside>
                 <a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/14343423571783764867245144106724765376315218788807079689183670698185125265409" target="_blank"><h1>Tree</h1></a>  
@@ -74,10 +74,10 @@
         </section>
 
         <div class="seccionHorizontal">
-            <a href="https://opensea.io/" target="_blank"><img id="painting4" src="img/prueba.png" alt=""></a>
+            <a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/14343423571783764867245144106724765376315218788807079689183670699284636893185" target="_blank"><img id="painting4" src="img/Art 4 Eye.jpg" alt=""></a>
             <div class="lineaVerticalSeccionesHorizontales"></div>
             <aside class="asideSeccionesHorizontales">
-                <a href="https://opensea.io/" target="_blank"><h1>Eye</h1></a>  
+                <a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/14343423571783764867245144106724765376315218788807079689183670699284636893185" target="_blank"><h1>Eye</h1></a>  
                 <p>This is my fourth painting. It was hand-made with black ink and brush on paper. Then it was
                     digitalized and transformed into NFT art.
                 </p>
